--- a/taxis_api.ipynb
+++ b/taxis_api.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install Socrata, if it isn't already installed\n",
+    "# !pip install sodapy, if it isn't already installed\n",
     "# Socrata is a online server that hosts a number of datasets\n",
     "\n",
     "import pandas as pd\n",
