--- a/.ipynb
+++ b/.ipynb
@@ -6,15 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "!pip install gmaps"
    ]
   },
@@ -90,7 +81,7 @@
     "df0=pd.DataFrame(pd.read_csv('data/'+file_list[0]))\n",
     "\n",
     "for file in file_list[1:]:\n",
-    "    df1=pd.DataFrame(pd.read_csv('data/'+file), sort=False)\n",
+    "    df1=pd.DataFrame(pd.read_csv('data/'+file))\n",
     "    df0=pd.concat([df0,df1])\n",
     "    \n",
     "df0.count()"
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2123,7 +2114,7 @@
        "[100 rows x 24 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2134,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4159,7 +4150,7 @@
        "[530905 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4171,7 +4162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4181,144 +4172,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pickup_centroid_latitude     530905\n",
+       "pickup_centroid_longitude    530905\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_pickup.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dropoff_centroid_latitude     530905\n",
+       "dropoff_centroid_longitude    530905\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dropoff.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gmaps\n",
-    "import gmaps.datasets\n",
-    "gmaps.configure(api_key=\"AIzaSyA8oeivFdyQV_4RfvxgMWQWwzMxl2d0WlE\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function figure in module gmaps.figure:\n",
-      "\n",
-      "figure(display_toolbar=True, display_errors=True, zoom_level=None, tilt=45, center=None, layout=None, map_type='ROADMAP', mouse_handling='COOPERATIVE')\n",
-      "    Create a gmaps figure\n",
-      "    \n",
-      "    This returns a `Figure` object to which you can add data layers.\n",
-      "    \n",
-      "    :param display_toolbar:\n",
-      "        Boolean denoting whether to show the toolbar. Defaults to True.\n",
-      "    :type display_toolbar: boolean, optional\n",
-      "    \n",
-      "    :param display_errors:\n",
-      "        Boolean denoting whether to show errors that arise in the client.\n",
-      "        Defaults to True.\n",
-      "    :type display_errors: boolean, optional\n",
-      "    \n",
-      "    :param zoom_level:\n",
-      "        Integer between 0 and 21 indicating the initial zoom level.\n",
-      "        High values are more zoomed in.\n",
-      "        By default, the zoom level is chosen to fit the data passed to the\n",
-      "        map. If specified, you must also specify the map center.\n",
-      "    :type zoom_level: int, optional\n",
-      "    \n",
-      "    :param tilt:\n",
-      "        Tilt can be either 0 or 45 indicating the tilt angle in\n",
-      "        degrees.  45-degree imagery is only available for satellite\n",
-      "        and hybrid map types, and is not available at every location\n",
-      "        at every zoom level. For locations where 45-degree imagery is\n",
-      "        not available, Google Maps will automatically fall back to 0\n",
-      "        tilt.\n",
-      "    :type tilt: int, optional\n",
-      "    \n",
-      "    :param center:\n",
-      "        Latitude-longitude pair determining the map center.\n",
-      "        By default, the map center is chosen to fit the data passed to the\n",
-      "        map. If specified, you must also specify the zoom level.\n",
-      "    :type center: tuple, optional\n",
-      "    \n",
-      "    :param map_type:\n",
-      "        String representing the type of map to show. One of 'ROADMAP' (the\n",
-      "        classic Google Maps style) 'SATELLITE' (just satellite tiles with no\n",
-      "        overlay), 'HYBRID' (satellite base tiles but with features such as\n",
-      "        roads and cities overlaid) and 'TERRAIN' (map showing terrain\n",
-      "        features). Defaults to 'ROADMAP'.\n",
-      "    :type map_type: str, optional\n",
-      "    \n",
-      "    :param mouse_handling:\n",
-      "        String representing how the map captures the page's mouse event. One of\n",
-      "        'COOPERATIVE' (scroll events scroll the page without zooming the map,\n",
-      "        double clicks or CTRL/CMD+scroll zoom the map), 'GREEDY' (the map\n",
-      "        captures all scroll events), 'NONE' (the map cannot be zoomed or panned\n",
-      "        by user gestures) or 'AUTO' (cooperative if the notebook is displayed\n",
-      "        in an iframe, greedy otherwise). Defaults to 'COOPERATIVE'.\n",
-      "    :type mouse_handling: str, optional\n",
-      "    \n",
-      "    :param layout:\n",
-      "        Control the layout of the figure, e.g. its width, height, border etc.\n",
-      "        For instance, passing ``layout={'width': '400px', 'height': '300px'}``\n",
-      "        will build a figure of fixed width and height.\n",
-      "        For more in formation on available properties, see the ipywidgets\n",
-      "        documentation on\n",
-      "        `widget layout <https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Styling.html#The-layout-attribute>`_.\n",
-      "    :type layout: dict, optional\n",
-      "    \n",
-      "    :returns:\n",
-      "        A :class:`gmaps.Figure` widget.\n",
-      "    \n",
-      "    :Examples:\n",
-      "    \n",
-      "    >>> import gmaps\n",
-      "    >>> gmaps.configure(api_key=\"AI...\")\n",
-      "    >>> fig = gmaps.figure()\n",
-      "    >>> locations = [(46.1, 5.2), (46.2, 5.3), (46.3, 5.4)]\n",
-      "    >>> fig.add_layer(gmaps.heatmap_layer(locations))\n",
-      "    \n",
-      "    You can also explicitly specify the intiial map center and zoom:\n",
-      "    \n",
-      "    >>> fig = gmaps.figure(center=(46.0, -5.0), zoom_level=8)\n",
-      "    \n",
-      "    To customise the layout:\n",
-      "    \n",
-      "    >>> fig = gmaps.figure(layout={\n",
-      "            'width': '400px',\n",
-      "            'height': '600px',\n",
-      "            'padding': '3px',\n",
-      "            'border': '1px solid black'\n",
-      "    })\n",
-      "    \n",
-      "    To have a satellite map:\n",
-      "    \n",
-      "    >>> fig = gmaps.figure(map_type='HYBRID')\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(gmaps.figure)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -4326,12 +4224,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0525876ee6c04858ad9aa5e3e6251365",
+       "model_id": "026e09659bbd4edf8df3cffd2dd46c38",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(layout=FigureLayout(height='300px', width='400px'))"
+       "Figure(layout=FigureLayout(height='420px'))"
       ]
      },
      "metadata": {},
@@ -4347,14 +4245,14 @@
     "locations = gmaps.datasets.load_dataset(\"taxi_rides\")\n",
     "\n",
     "\n",
-    "fig = gmaps.figure(layout={'width': '400px', 'height': '300px'})\n",
-    "fig.add_layer(gmaps.heatmap_layer(locations, weights=list(range(500)), max_intensity=100, point_radius = 4, dissipating=False))\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(gmaps.heatmap_layer(locations, weights=list(range(500)), max_intensity=100, point_radius = 1, dissipating=False))\n",
     "fig\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -4862,7 +4760,7 @@
        " (37.751266, -122.403355)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4873,7 +4771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4888,8 +4786,7 @@
    "source": [
     "fig = gmaps.figure()\n",
     "fig.add_layer(gmaps.heatmap_layer(locations))\n",
-    "fig\n",
-    "\n"
+    "fig"
    ]
   },
   {
