Even more charts added

--- a/generate_data_analysis_csv.ipynb
+++ b/generate_data_analysis_csv.ipynb
@@ -32,6 +32,86 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chunk0.csv\n",
+      "chunk1.csv\n",
+      "chunk10.csv\n",
+      "chunk11.csv\n",
+      "chunk12.csv\n",
+      "chunk13.csv\n",
+      "chunk14.csv\n",
+      "chunk15.csv\n",
+      "chunk16.csv\n",
+      "chunk17.csv\n",
+      "chunk18.csv\n",
+      "chunk19.csv\n",
+      "chunk2.csv\n",
+      "chunk20.csv\n",
+      "chunk21.csv\n",
+      "chunk22.csv\n",
+      "chunk23.csv\n",
+      "chunk24.csv\n",
+      "chunk25.csv\n",
+      "chunk26.csv\n",
+      "chunk27.csv\n",
+      "chunk28.csv\n",
+      "chunk29.csv\n",
+      "chunk3.csv\n",
+      "chunk30.csv\n",
+      "chunk31.csv\n",
+      "chunk32.csv\n",
+      "chunk33.csv\n",
+      "chunk34.csv\n",
+      "chunk35.csv\n",
+      "chunk36.csv\n",
+      "chunk37.csv\n",
+      "chunk4.csv\n",
+      "chunk5.csv\n",
+      "chunk6.csv\n",
+      "chunk7.csv\n",
+      "chunk8.csv\n",
+      "chunk9.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "master_df=pd.DataFrame()\n",
+    "\n",
+    "for file in files:\n",
+    "    df=pd.DataFrame(pd.read_csv('../data2/{}'.format(files[0]),\n",
+    "                            usecols=['Pickup Census Tract'],\n",
+    "                            dtype={\n",
+    "                                'Trip ID':object,\n",
+    "                                \"Trip Start Timestamp\":object,\n",
+    "                                \"Trip Seconds\":float,\n",
+    "                                \"Trip Miles\":float,\n",
+    "                                \"Pickup Census Tract\":float,\n",
+    "                                \"Dropoff Census Tract\":float,\n",
+    "                                \"Pickup Community Area\":float,\n",
+    "                                \"Dropoff Community Area\":float,\n",
+    "                                \"Fare\":object,\n",
+    "                                \"Trip Total\":object,\n",
+    "                                \"Payment Type\":object,\n",
+    "                                \"Pickup Centroid Latitude\":float,\n",
+    "                                \"Pickup Centroid Longitude\":float,\n",
+    "                                \"Dropoff Centroid Latitude\":float,\n",
+    "                                \"Dropoff Centroid Longitude\":float\n",
+    "                            }))\n",
+    "    df1=df.dropna()\n",
+    "    master_df=pd.concat([master_df,df1])\n",
+    "    print(file)\n",
+    "    \n",
+    "master_df.to_csv('../analysis_data/pickupcensus.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
