--- a/heat_maps.ipynb
+++ b/heat_maps.ipynb
@@ -119,7 +119,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -292,13 +294,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7847f46d176148ce86ea8043c4a3a7af",
+       "model_id": "0783323e0ee44a2ba4e597d19620e42a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,20 +329,32 @@
     "fig.add_layer(gmaps.heatmap_layer(\n",
     "    locations,\n",
     "    weights=df1['Weights'],\n",
-    "    max_intensity=100,\n",
-    "    point_radius=4,\n",
+    "    max_intensity=100000,\n",
+    "    point_radius=15,\n",
     "    dissipating=True))\n",
-    "\n",
-    "fig"
+    "fig\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'heatmap_layer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-5d99102b7393>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mheatmap_layer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_intensity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mheatmap_layer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpoint_radius\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'heatmap_layer' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "help(gmaps.heatmap_layer)"
+    "heatmap_layer.max_intensity = 100\n",
+    "heatmap_layer.point_radius = 5"
    ]
   },
   {
